# Akinator_2.0

./: .gitignore  ACHIEVEMENT_UNLOCKED.md  Dockerfile  Procfile  README.md  apply_learning.py  entity_to_category_map.py  generate_synthetic_entities.py  migrate_db_62_attrs.py  migrate_to_80_attrs.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  suggest_overrides.py
.github/workflows/: regression-test.yml
akinator/: __main__.py  backup.py  config.py  generate_db.py  import_wikidata.py  import_wikidata_rest.py  seed.py
akinator/bot/: handlers.py  keyboards.py
akinator/data/: akinator.db  categories.py  categories_new.py  categories_old_backup.py
akinator/db/: models.py  repository.py
akinator/engine/: candidate.py  question_policy.py  scoring.py  session.py
akinator/llm/: client.py
docs/: ARCHITECTURE.md  DATA_MODEL.md  GAME_LOGIC.md  TELEGRAM_UX.md
memory/: EXPANDED_ATTRIBUTES.md  FAILURE_ANALYSIS.md  FINAL_RESULTS.md  SIMULATION_RESULTS.md
scripts/: background_collector.py  enhance_attributes.py  expand_schema.py  fix_all_remaining.py  fix_anime.py  fix_fictional.py  fix_final.py  fix_historical.py  fix_remaining.py  parallel_collector.py
src/akinator/: __main__.py  config.py  seed.py
src/akinator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/akinator/bot/: handlers.py
src/akinator/db/: models.py  repository.py
tests/: README_REGRESSION_TEST.md  conftest.py  test_candidate.py  test_handlers.py  test_llm_client.py  test_question_policy.py  test_repository.py  test_scoring.py  test_session.py  test_simulation.py
(+5 files in other folders)
