[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akinator"
version = "0.1.0"
description = "Akinator 2.0 — Telegram bot that guesses characters using Bayesian inference and LLM"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "aiogram>=3.4,<4",
    "openai>=1.0,<2",
    "faiss-cpu>=1.7,<2",
    "numpy>=1.24,<3",
    "aiosqlite>=0.19,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
source = ["akinator"]
